# FractFlow

./: .cursorrules  .env.example  .gitignore  1.py  README.md  README_CN.md  ai-intend.md  example.py  fractflow_nicegui.py  main.py  male_bedroom_design.json  male_bedroom_design_optimized.json  pyproject.toml  refactoring_recommendations.md  requirements.txt  run_agent_1.py  run_blender_agent.py  run_code_gen.py  run_fractal_blender_agent.py  run_fractal_example.py  run_scene_language_example.py  run_simple_example.py  run_simple_example_ui.py  toolgen.py
FractFlow/: agent.py  tool_template.py
FractFlow/conversation/: base_history.py
FractFlow/core/: orchestrator.py  query_processor.py  tool_executor.py
FractFlow/infra/: config.py  error_handling.py  logging_utils.py
FractFlow/mcpcore/: client_pool.py  launcher.py  tool_loader.py
FractFlow/models/: deepseek_model.py  deepseek_model_reasoner.py  factory.py  orchestrator_model.py  qwen_model.py  toolCallingHelper.py  toolcall_model.py
FractFlow/tests/: test_deepseek_tool_calling.py
FractFlow/ui/: ui.py
FractalMCP/: agent.py
FractalMCP/conversation/: base_history.py
FractalMCP/core/: orchestrator.py  tool_executor.py
FractalMCP/infra/: config.py
FractalMCP/mcpcore/: launcher.py
FractalMCP/models/: __init__.py  (+1 more)
prompts/: fract_main_agent_prompts.py  main_agent_prompts.py  sclg_agent_prompts.py
scripts/: run_code_gen.py  run_fractal_example.py  run_save_web_search_to_file.py  run_simple_example.py  run_simple_example_ui.py  run_simple_visual_article_generator.py  run_ui_beta.py  run_visual_article_generator.py  run_weather.py
src/: agent.py
tests/: README.md  conftest.py  playground.ipynb  test_web_search_save.py
tools/: ComfyUITool.py  VisualQestionAnswer.py  __init__.py  blender_mcp_server.py  coding.py  fractal_blender_mcp_server.py  fractal_weather_tool.py  gpt_imagen.py  image_io.py  snake_game.py  websearch.py
(+163 files in other folders)
