[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FractFlow"
version = "0.1.0"
description = "FractFlow: Fractal Coordination in a Distributed Cognitive System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yingcong Chen" }
]
keywords = ["ai", "agent", "llm", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "python-dotenv",
    "requests",
    "asyncio",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "typing-extensions",
    "httpx",
    "httpx-sse",
    "websockets",
    "tenacity",
    "jinja2",
    "orjson",
]


[tool.setuptools]
packages = ["FractFlow"]
